--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
 </head>
 <body>
  <div id="header-placeholder"></div>
- <h4>want peek you</h4><span>Nostr kind:30000 Event Manager</span>
+ <h4>want peek you</h4>
+ <span>Nostr kind:30000 Event Manager</span>
  <div id="container">
  <div id="loader" style="display:none;"><p>処理中...</p></div>
+ 
+ <button id="getFromExtensionButton" type="button">拡張機能から取得</button>
  <label for="nsecInput">秘密鍵(nsec):</label>
  <input type="text" id="nsecInput" placeholder="nsec1..." value="">
  <div id="pubkeyInfo" style="margin-top:10px;">
  <p>公開鍵(npub):<span id="npubDisplay"></span></p>
  <p>公開鍵(hex):<span id="hexDisplay"></span></p>
  </div>
-<button class="container-button" onclick="fetchEvents()">読み込み</button>
-<button class="container-button" onclick="showNewListForm()">新規作成</button>
+
+ <label for="relayInput">使用するリレー(改行&コンマ区切り、空欄でデフォルトリレーを使用)</label>
+ <textarea id="relayInput" placeholder="wss://relay.nostr.band/,wss://nos.lol/"></textarea>
+
+ <button class="container-button" id="fetchEventsButton">読み込み</button>
+ <button class="container-button" id="showNewListButton">新規作成</button>
  <label for="dTagSelect">編集したいリストを選択:</label>
  <select id="dTagSelect" disabled>
  <option value=""></option>
  </select>
-<div id="newListFormContainer" style="display:none;">
+ <div id="newListFormContainer" style="display:none;">
  <label for="newDTagInput">新しいリスト名(dタグ):</label>
  <input type="text" id="newDTagInput" placeholder="例:my-friends-list">
-</div>
- <button class="container-button" onclick="decryptContent()" id="decryptButton" disabled>リストを編集</button>
+ </div>
+ <button class="container-button" id="decryptButton" disabled>リストを編集</button>
  <div class="flex-container">
  <div class="flex-item">
  <label for="contentInput">リストのメンバー(追加・削除):</label>
@@ -38,326 +45,14 @@
  <textarea id="pTagsInput" rows="5" placeholder="公開鍵をhex形式で入力(改行、カンマ、スペース区切り)"></textarea>
  </div>
  </div>
- <button class="container-button" onclick="generateEvent()" id="generateButton">変更内容を準備</button>
+ <button class="container-button" id="generateButton">変更内容を準備</button>
  <h5>生成されたJSON</h5>
  <pre id="generatedJson" style="min-height:100px;"></pre>
- <button class="container-button" onclick="updateEvent()" id="updateButton" disabled>リストを更新する</button>
+ <button class="container-button" id="updateButton" disabled>リストを更新する</button>
  </div>
-<script src="https://unpkg.com/nostr-tools/lib/nostr.bundle.js"></script>
-<script>
-function getKeysFromNsec(nsec){
- const { data:privkey } = nip19.decode(nsec);
- const pubkey = getPublicKey(privkey);
- return { privkey, pubkey };
-}
-
-const { getPublicKey, nip19, finalizeEvent, nip04 } = window.NostrTools;
-const relayUrls = ['wss://relay.nostr.band', 'wss://nos.lol'];
-
-function connectWebSocket(onOpen, onMessage, onError, onClose){
- let index = 0;
- function tryConnect(){
- const currentUrl = relayUrls[index];
- const socket = new WebSocket(currentUrl);
- socket.onopen =()=> {
- connectedRelayUrl = currentUrl;
- onOpen(socket);
- };
- socket.onmessage = onMessage;
- socket.onerror =()=> {
- index++;
- if(index < relayUrls.length){
- tryConnect();
- } else {
- onError();
- }
- };
- socket.onclose = onClose;
- }
- tryConnect();
-}
-
-const eventMap = new Map();
-let userNsec = '';
-let userPubkey = '';
-let currentEvent = null;
-let originalPubkeysFromPtag = [];
-let originalDtag = '';
-let connectedRelayUrl = '';
-
-const nsecInput = document.getElementById('nsecInput');
-const npubDisplay = document.getElementById('npubDisplay');
-const hexDisplay = document.getElementById('hexDisplay');
-const dTagSelect = document.getElementById('dTagSelect');
-const contentInput = document.getElementById('contentInput');
-const pTagsInput = document.getElementById('pTagsInput');
-const generatedJsonPre = document.getElementById('generatedJson');
-const logDiv = document.getElementById('log');
-const decryptButton = document.getElementById('decryptButton');
-const newListFormContainer = document.getElementById('newListFormContainer');
-const generateButton = document.getElementById('generateButton');
-const updateButton = document.getElementById('updateButton');
-const loader = document.getElementById('loader');
-
-nsecInput.addEventListener("input",()=> {
- const nsecValue = nsecInput.value.trim();
- if(nsecValue){
- try {
- const nsecDecoded = window.NostrTools.nip19.decode(nsecValue);
- if(nsecDecoded.type === 'nsec'){
- const seckey = nsecDecoded.data;
- const pubkey = window.NostrTools.getPublicKey(seckey);
- const npub = window.NostrTools.nip19.npubEncode(pubkey);
- npubDisplay.textContent = npub;
- hexDisplay.textContent = pubkey;
- return;
- }
- } catch(e){
- npubDisplay.textContent = '';
- hexDisplay.textContent = '';
- }
- }
- npubDisplay.textContent = '';
- hexDisplay.textContent = '';
-});
-
-function showLoader(){
- loader.style.display = 'block';
-}
-
-function hideLoader(){
- loader.style.display = 'none';
-}
-
-function log(message, type = 'info'){
- if(type === 'error'){
- console.error(message);
- } else if(type === 'success'){
- console.log(message);
- } else {
- console.log(message);
- }
-}
-
-function parsePubkeys(input){
- return input.split(/[\n, \t]+/).map(key => key.trim()).filter(key => key.length === 64);
-}
-
-function showNewListForm(){
- newListFormContainer.style.display = 'block';
- dTagSelect.disabled = true;
- dTagSelect.selectedIndex = 0;
- decryptButton.disabled = true;
- generateButton.disabled = false;
-}
-
-function fetchEvents(){
- showLoader();
- dTagSelect.innerHTML = '<option value="">dタグを選択してください</option>';
- dTagSelect.disabled = true;
- decryptButton.disabled = true;
- const nsec = nsecInput.value;
- if(!nsec){
- log('nsecを入力してください。', 'error');
- hideLoader();
- return;
- }
- try {
- const { privkey, pubkey } = getKeysFromNsec(nsec);
- pTagsInput.value = pubkey;
- const events = [];
- let currentSocket;
- connectWebSocket(
-(socket)=> {
- log('WebSocket接続成功');
- currentSocket = socket;
- const subscriptionId = "kind30000_sub";
- const filter = { kinds:[30000], authors:[pubkey] };
- currentSocket.send(JSON.stringify(["REQ", subscriptionId, filter]));
- },
-(event)=> {
- const data = JSON.parse(event.data);
- if(data[0] === "EVENT"){
- events.push(data[2]);
- }
- if(data[0] === "EOSE"){
- log('イベント取得完了。WebSocketを閉じます。');
- if(currentSocket){
- currentSocket.close();
- }
- if(events.length === 0){
- log('kind:30000のイベントが見つかりませんでした。', 'error');
- } else {
- eventMap.clear();
- events.forEach(event => {
- const dTag = event.tags.find(tag => tag[0] === 'd');
- if(dTag){
- eventMap.set(event.id, event);
- const option = document.createElement('option');
- option.value = event.id;
- option.textContent = dTag[1];
- dTagSelect.appendChild(option);
- }
- });
- dTagSelect.disabled = false;
- decryptButton.disabled = false;
- log(`${events.length}件のイベントを取得しました。`);
- }
- hideLoader();
- }
- },
-()=> {
- log('すべてのリレー接続に失敗しました。', 'error');
- hideLoader();
- },
-()=> {
- log('WebSocket接続を閉じました。');
- hideLoader();
- }
- );
- } catch(error){
- log('イベント取得中にエラーが発生しました:' + error.message, 'error');
- hideLoader();
- }
-}
-
-async function decryptContent(){
- showLoader();
- try {
- const selectedId = dTagSelect.value;
- if(!selectedId){
- log('イベントを選択してください。', 'error');
- hideLoader();
- return;
- }
- currentEvent = eventMap.get(selectedId);
- const nsec = nsecInput.value;
- if(!nsec){
- log('nsecを入力してください。', 'error');
- hideLoader();
- return;
- }
- const { privkey, pubkey } = getKeysFromNsec(nsec);
- userNsec = privkey;
- userPubkey = pubkey;
- const pubkeyFromEvent = currentEvent.pubkey;
- if(userPubkey !== pubkeyFromEvent){
- log('入力されたnsecは、このイベントの公開鍵と一致しません。', 'error');
- hideLoader();
- return;
- }
- originalPubkeysFromPtag = currentEvent.tags.filter(tag => tag[0] === 'p').map(tag => tag[1]);
- originalDtag = currentEvent.tags.find(tag => tag[0] === 'd')[1];
- if(originalPubkeysFromPtag.length === 0){
- log('pタグが見つからないため復号できません。', 'error');
- hideLoader();
- return;
- }
- const pubkeyForDecryption = originalPubkeysFromPtag[0];
- const decryptedContent = await nip04.decrypt(privkey, pubkeyForDecryption, currentEvent.content);
- const decryptedData = JSON.parse(decryptedContent);
- const pubkeys = decryptedData.map(tag => tag[1]);
- contentInput.value = pubkeys.join('\n');
- pTagsInput.value = originalPubkeysFromPtag.join('\n');
- log('イベントを正常に復号しました。');
- generateButton.disabled = false;
- } catch(error){
- log('復号中にエラーが発生しました:' + error.message, 'error');
- } finally {
- hideLoader();
- }
-}
-
-async function generateEvent(){
- showLoader();
- try {
- const nsec = nsecInput.value;
- if(!nsec){
- log('nsecを入力してください。', 'error');
- hideLoader();
- return;
- }
- const { privkey, pubkey } = getKeysFromNsec(nsec);
- const newContentPubkeys = parsePubkeys(contentInput.value);
- const newPTagsPubkeys = parsePubkeys(pTagsInput.value);
- if(newContentPubkeys.length === 0 || newPTagsPubkeys.length === 0){
- log('contentまたはpタグに含める公開鍵を入力してください。', 'error');
- hideLoader();
- return;
- }
- const newDtag = document.getElementById('newDTagInput').value.trim();
- const dtagToUse = newDtag || originalDtag;
- if(!dtagToUse){
- log('dタグ(リスト名)を入力するか、既存イベントを選択してください。', 'error');
- hideLoader();
- return;
- }
- const contentTags = newContentPubkeys.map(pubkey => ["p", pubkey]);
- const encryptedContent = await nip04.encrypt(privkey, newPTagsPubkeys[0], JSON.stringify(contentTags));
- const event = {
- kind:30000,
- created_at:Math.floor(Date.now()/ 1000),
- tags:[
- ['d', dtagToUse],
- ...newPTagsPubkeys.map(pubkey => ['p', pubkey]),
- ],
- content:encryptedContent,
- };
- const signedEvent = finalizeEvent(event, privkey);
- generatedJsonPre.textContent = JSON.stringify(signedEvent, null, 2);
- log('JSONイベントを生成しました。');
- updateButton.disabled = false;
- } catch(error){
- log('JSON生成中にエラーが発生しました:' + error.message, 'error');
- } finally {
- hideLoader();
- }
-}
-
-async function updateEvent(){
- showLoader();
- try {
- const event = JSON.parse(generatedJsonPre.textContent);
- const relayUrl = connectedRelayUrl || relayUrls[0];
- const socket = new WebSocket(relayUrl);
- socket.onopen =()=> {
- log(`イベントを公開中のリレー:${relayUrl}`);
- log('イベント公開のためのWebSocket接続成功');
- socket.send(JSON.stringify(["EVENT", event]));
- };
- socket.onmessage =(msg)=> {
- const data = JSON.parse(msg.data);
- if(data[0] === "OK"){
- if(data[2]){
- log('イベントは正常に公開されました！', 'success');
- alert(`${relayUrl} に kind:30000 を送信しました！`);
- contentInput.value = '';
- pTagsInput.value = '';
- newDTagInput.value = '';
- dTagSelect.selectedIndex = 0;
- decryptButton.disabled = true;
- dTagSelect.disabled = true;
- updateButton.disabled = true;
- generateButton.disabled = true;
- generatedJsonPre.textContent = '';
- } else {
- log('イベントの公開に失敗しました:' + data[3], 'error');
- }
- socket.close();
- }
- };
- socket.onerror =(err)=> {
- log('イベント公開時のWebSocketエラー:' + err.message, 'error');
- socket.close();
- hideLoader();
- };
- } catch(error){
- log('イベント更新中にエラーが発生しました:' + error.message, 'error');
- } finally {
- hideLoader();
- }
-}
-</script>
-<script src="https://ompomz.github.io/header/loadHeader.js"></script>
+ <script src="https://ompomz.github.io/header/loadHeader.js"></script>
+ <script src="https://unpkg.com/nostr-tools@2.17.0/lib/nostr.bundle.js"></script>
+ <script src="https://ompomz.github.io/flowgazer/relay-manager.js"></script>
+ <script src="script.js"></script>
 </body>
 </html>
