--- a/index.html
+++ b/index.html
@@ -5,7 +5,94 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>want peek you</title>
  <style>
-  @media (max-width:300px){#container{max-width:100%;padding:8px;margin:0}.flex-container{flex-direction:column;align-items:stretch}}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* ベース */
+body {
+  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  padding: .5rem;
+  line-height: 1.3;
+  background-color: #f7f7f7;
+  color: #666;
+  font-size: .9rem;
+}
+/* コンテナ */
+#container {
+  max-width: 600px;
+  margin: 1rem auto;
+  padding: .5rem;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+/* 見出し */
+h4 {
+  font-size: 1.2rem;
+  margin-bottom: .5rem;
+}
+/* 入力欄・テキストエリア・セレクト */
+input, textarea, select {
+  transition: background-color 0.3s, color 0.3s;
+  font-size: .9rem;
+  padding: .5rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  color: #666;
+  background-color: #fff;
+  width: 100%;
+  margin-bottom: .5rem;
+}
+textarea {
+  resize: vertical;
+}
+/* ボタン共通 */
+.container-button,
+#getFromExtensionButton {
+  white-space: nowrap;
+  font-size: .8rem;
+  font-weight: 700;
+  padding: .25rem 1rem;
+  margin: .5rem 0;
+  border: none;
+  border-radius: 999px;
+  color: #fff;
+  background-color: #666;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.container-button:hover,
+#getFromExtensionButton:hover {
+  background-color: #444;
+}
+/* フレックス配置 */
+.flex-container {
+  display: flex;
+  gap: .5rem;
+  margin: .5rem 0;
+}
+.flex-item {
+  flex: 1;
+}
+/* JSON表示枠 */
+pre {
+  background: #f0f0f0;
+  padding: .5rem;
+  border-radius: 4px;
+  min-height: 100px;
+  overflow-x: auto;
+}
+/* レスポンシブ */
+@media (max-width: 767px) {
+  #container {
+    max-width: 100%;
+    padding: 8px;
+    margin: 0;
+  }
+}
  </style>
 </head>
 <body>
