--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 }
 #container {
   max-width: 600px;
-  margin: 1rem auto;
+  margin: 1rem;
   padding: .5rem;
   background: #fff;
   border: 1px solid #ddd;
