--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@ pre {
    <div class="flex-container">
      <div class="flex-item">
        <label for="pTagsInput">Public（公開リスト）</label>
-       <textarea id="pTagsInput" rows="5" placeholder="リストに入れたい人の公開鍵をhex形式で入力(改行、カンマ、スペース区切り)"></textarea>
+       <textarea id="pTagsInput" rows="5" placeholder="公開リストに入れたいひとの公開鍵（hex形式。改行、カンマ、スペース区切りいけます。）"></textarea>
      </div>
      <div class="flex-item">
        <label for="contentInput">Private（非公開リスト）</label>
-       <textarea id="contentInput" rows="5" placeholder="リストに入れたい人の公開鍵をhex形式で入力(改行、カンマ、スペース区切り)" disabled></textarea>
-       <small style="color: #999;">※非公開リストの編集には秘密鍵が必要です</small>
+       <textarea id="contentInput" rows="5" placeholder="非公開リストに入れたいひとの公開鍵（hex形式。改行、カンマ、スペース区切りいけます。）" disabled></textarea>
+       <small style="color: #999;">※非公開リストの表示・リストの編集には、秘密鍵が必要です。</small>
      </div>
    </div>
    
