--- a/index.html
+++ b/index.html
@@ -169,10 +169,12 @@ pre {
      </div>
      
     <form onsubmit="return false;" style="margin: .5rem 0;">
+      <input type="text" name="username" autocomplete="username" style="display: none;">    
       <label for="decrypt-nsec-input">または秘密鍵(nsec)を入力:</label>
       <input type="password" id="decrypt-nsec-input" placeholder="nsec1..." autocomplete="current-password">
       <button type="button" class="container-button" id="decrypt-with-nsec">この鍵で復号</button>
     </form>
+
      <button class="container-button" id="cancel-decrypt" style="background-color: #999;">キャンセル</button>
    </div>
 
