--- a/kind0.html
+++ b/kind0.html
@@ -30,7 +30,7 @@
 <tbody></tbody>
 </table>
 <script>
-    const relayURL = "wss://relay.nostr.band";
+    const relayURL = "wss://nos.lol/";
 
     function decodeNpub(npub) {
       try {
